--- a/public/views/itemCRUD.html
+++ b/public/views/itemCRUD.html
@@ -22,41 +22,57 @@
     <h2 id="userGreeting" style="margin-left:2.5%">Hello {username}!</h2>
     <div style="margin-top: 5px"></div>
 
-    <div id = "which">
-      <input type="radio" id="contactChoice1"
-       name="radioName" value="Add Item" checked>
-      <label for="contactChoice1">Add Item</label>
-
-      <input type="radio" id="contactChoice2"
-       name="radioName" value="changeItem">
-      <label for="contactChoice2">Change Item</label>
+    <div id="toolbar">
+      <input id="search" type="text" value="Search for an item">
+      <button id="request" class="request">Go</button>
+      <div id="toolbarRight">
+        <button id="messages" class="toolbarButton">Messages</button>
+        <button id="account" class="toolbarButton">Account</button>
+        <button id="cart" class="toolbarButton">Cart</button>
+        <button id="logout" class="toolbarButton">Log Out</button>
+      </div>
     </div>
 
-    <form id = "addf" action="/fileupload">
-      <div id= "add">
-        <input type="text" id="name" value="Item Name" class= "adminInput"></input><br>
-        <!--<input type="text" id="id" value="Item ID" class= "adminInput "></input>-->
-        <input type="text" id="desc" value="Item Description" class="adminInput"></input><br>
-        <input type="text" id="price" value="Item Price" class="adminInput"></input><br>
-        <input type="text" id="key" value="Key Words" class= "adminInput"></input><br>
-        <input type="file" id="url" name = "sample" class= "adminInput"></input><br>
-        <div style= "margin-top: 100px "></div>
-        <button id= "add " class= "request" type="submit">Add Item</button>
-      <div style= "margin-top: 20px "></div></div>
-    </form>
-    <form id = "updatef">
-      <div id= "update">
-        <input type="text" id="IDSearch" value="SearchID" class= "adminInput"></input><button id= "change" class= "request">Find</button><br><br><br><br><br>
-        <input type="text" id="name2" value="Item Name" class= "adminInput"></input><br>
-        <input type="text" id="desc2" value="Item Description" class="adminInput"></input><br>
-        <input type="text" id="price2" value="Item Price" class="adminInput"></input><br>
-        <input type="text" id="key2" value="Key Words" class= "adminInput"></input><br>
-        <input type="file" id="url" value="Item Picture URL" class= "adminInput"></input><br>
-        <div style= "margin-top: 100px "></div>
-        <button id= "change " class= "request">Change Item</button><br>
-        <button id= "remove " class= "request">Delete Item</button><br>
-      <div style= "margin-top: 20px "></div></div>
-    </form>
+    <div id="sessionPageback">
+
+      <div id = "which">
+        <input type="radio" id="contactChoice1"
+         name="radioName" value="Add Item" checked>
+        <label for="contactChoice1">Add Item</label>
+
+        <input type="radio" id="contactChoice2"
+         name="radioName" value="changeItem">
+        <label for="contactChoice2">Change Item</label>
+      </div>
+
+      <form id = "addf" action="/fileupload">
+        <div id= "add">
+          <input style = "width: 600px;" type="text" id="name" value="Item Name" class= "adminInput"></input><br>
+          <!--<input type="text" id="id" value="Item ID" class= "adminInput "></input>-->
+          <input style = "width: 600px;" type="text" id="desc" value="Item Description" class="adminInput"></input><br>
+          <input style = "width: 600px;" type="text" id="price" value="Item Price" class="adminInput"></input><br>
+          <input style = "width: 600px;" type="text" id="key" value="Key Words" class= "adminInput"></input><br>
+          <input style = "width: 600px;" type="file" id="url" name = "sample" class= "adminInput"></input><br>
+          <div style= "margin-top: 100px "></div>
+          <button id= "add " class= "request" type="submit">Add Item</button>
+        <div style= "margin-top: 20px "></div></div>
+      </form>
+      <form id = "updatef">
+        <br>
+        <input type="text" id="IDSearch" value="SearchID" class= "adminInput"></input><button id= "changeID" class= "request">Find</button><br>
+        <div id= "updater">
+          <br>
+
+          <input style = "width: 600px;" type="text" id="name2" value="Item Name" class= "adminInput"></input><br>
+          <input style = "width: 600px;" type="text" id="desc2" value="Item Description" class="adminInput"></input><br>
+          <input style = "width: 600px;" type="text" id="price2" value="Item Price" class="adminInput"></input><br>
+          <input style = "width: 600px;" type="text" id="key2" value="Key Words" class= "adminInput"></input><br>
+          <input style = "width: 600px;" type="file" id="url2" value="Item Picture URL" class= "adminInput"></input><br><br><br>
+          <button id= "change2" class= "request">Change Item</button>
+          <button id= "remove2" class= "request">Delete Item</button>
+        <div style= "margin-top: 20px "></div></div>
+      </form>
+    </div>
     <script src="js/toolbar.js"></script>
     <script src="js/userInfo.js"></script>
     <script src="js/itemCRUD.js"></script>
