--- a/public/views/itemCRUD.html
+++ b/public/views/itemCRUD.html
@@ -1,81 +1,84 @@
 <html>
-  <head>
-    <title>Yeemazon - Account</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/style.css">
-    <style type="text/css">
-      .request {
-        width: 200px;
-        height: 30px;
-        margin-bottom: 20px;
-      }
 
-      body {
-        background: cover;
-      }
-    </style>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-  </head>
-  <body>
-    <h1 class="loginHeader">Yeemazon</h1>
-    <div style="margin-top: 20px"></div>
+<head>
+  <title>Yeemazon - Account</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/style.css">
+  <style type="text/css">
+    .request {
+      width: 200px;
+      height: 30px;
+      margin-bottom: 20px;
+    }
 
-    <div id="crudToolbar">
-      <input id="search" type="text" value="Search for an item">
-      <button id="request" class="request">Go</button>
-      <div id="toolbarRight">
-        <button id="ProductMan" class="toolbarButton">Products</button>
-        <button id="messages" class="toolbarButton">Messages</button>
-        <button id="account" class="toolbarButton">Account</button>
-        <button id="cart" class="toolbarButton">Cart</button>
-        <button id="logout" class="toolbarButton">Log Out</button>
-      </div>
+    body {
+      background: cover;
+    }
+  </style>
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+</head>
+
+<body>
+  <h1 class="loginHeader">Yeemazon</h1>
+  <div style="margin-top: 20px"></div>
+
+  <div id="crudToolbar">
+    <input id="search" type="text" value="Search for an item">
+    <button id="request" class="request">Go</button>
+    <div id="toolbarRight">
+      <button id="ProductMan" class="toolbarButton">Products</button>
+      <button id="messages" class="toolbarButton">Messages</button>
+      <button id="account" class="toolbarButton">Account</button>
+      <button id="cart" class="toolbarButton">Cart</button>
+      <button id="logout" class="toolbarButton">Log Out</button>
+    </div>
+  </div>
+
+  <div id="crudPageback">
+    <div id="which" style="padding-top:20px">
+      <input type="radio" id="contactChoice1" name="radioName" value="Add Item" checked>
+      <label for="contactChoice1">Add Item</label>
+
+      <input type="radio" id="contactChoice2" name="radioName" value="changeItem">
+      <label for="contactChoice2">Change Item</label>
     </div>
 
-    <div id="crudPageback">
-      <div id = "which" style="padding-top:20px">
-        <input type="radio" id="contactChoice1"
-         name="radioName" value="Add Item" checked>
-        <label for="contactChoice1">Add Item</label>
-
-        <input type="radio" id="contactChoice2"
-         name="radioName" value="changeItem">
-        <label for="contactChoice2">Change Item</label>
+    <form id="addf" action="/fileupload">
+      <div id="add">
+        <input style="width: 600px;" type="text" id="name" value="Item Name" class="adminInput"></input><br>
+        <!--<input type="text" id="id" value="Item ID" class= "adminInput "></input>-->
+        <input style="width: 600px;" type="text" id="desc" value="Item Description" class="adminInput"></input><br>
+        <input style="width: 600px;" type="text" id="price" value="Item Price" class="adminInput"></input><br>
+        <input style="width: 600px;" type="text" id="key" value="Key Words" class="adminInput"></input><br>
+        <input style="width: 600px;" type="file" id="url" name="sample" class="adminInput"></input><br>
+        <div style="margin-top: 100px "></div>
+        <button id="add " class="request" type="submit">Add Item</button>
+        <div style="margin-top: 20px "></div>
       </div>
-
-      <form id = "addf" action="/fileupload">
-        <div id= "add">
-          <input style = "width: 600px;" type="text" id="name" value="Item Name" class= "adminInput"></input><br>
-          <!--<input type="text" id="id" value="Item ID" class= "adminInput "></input>-->
-          <input style = "width: 600px;" type="text" id="desc" value="Item Description" class="adminInput"></input><br>
-          <input style = "width: 600px;" type="text" id="price" value="Item Price" class="adminInput"></input><br>
-          <input style = "width: 600px;" type="text" id="key" value="Key Words" class= "adminInput"></input><br>
-          <input style = "width: 600px;" type="file" id="url" name = "sample" class= "adminInput"></input><br>
-          <div style= "margin-top: 100px "></div>
-          <button id= "add " class= "request" type="submit">Add Item</button>
-        <div style= "margin-top: 20px "></div></div>
-      </form>
-      <div id = "okay">
-        <input type="text" id="IDSearch" value="SearchID" class= "adminInput"></input><button id= "changeID" class= "request">Find</button><br>
-      </div>
-      <form id = "updatef" action="/fileupload">
+    </form>
+    <div id="okay">
+      <input type="text" id="IDSearch" value="SearchID" class="adminInput"></input><button id="changeID" class="request">Find</button><br>
+    </div>
+    <form id="updatef" action="/fileupload">
+      <br>
+      <div id="updater">
         <br>
-        <div id= "updater">
-          <br>
-          <input style = "width: 600px;" type="text" id="name2" value="Item Name" class= "adminInput"></input><br>
-          <input style = "width: 600px;" type="text" id="desc2" value="Item Description" class="adminInput"></input><br>
-          <input style = "width: 600px;" type="text" id="price2" value="Item Price" class="adminInput"></input><br>
-          <input style = "width: 600px;" type="text" id="key2" value="Key Words" class= "adminInput"></input><br>
-          <input style = "width: 600px;" type="file" id="url2" name = "sample" value="Item Picture URL" class= "adminInput"></input><br><br><br>
-          <button id= "change2" class= "request" type = "submit">Change Item</button>
-        <div style= "margin-top: 20px "></div></div>
-      </form>
-      <div id = "okay2">
-        <button id= "remove2" class= "request">Delete Item</button>
+        <input style="width: 600px;" type="text" id="name2" value="Item Name" class="adminInput"></input><br>
+        <input style="width: 600px;" type="text" id="desc2" value="Item Description" class="adminInput"></input><br>
+        <input style="width: 600px;" type="text" id="price2" value="Item Price" class="adminInput"></input><br>
+        <input style="width: 600px;" type="text" id="key2" value="Key Words" class="adminInput"></input><br>
+        <input style="width: 600px;" type="file" id="url2" name="sample" value="Item Picture URL" class="adminInput"></input><br><br><br>
+        <button id="change2" class="request" type="submit">Change Item</button>
+        <div style="margin-top: 20px "></div>
       </div>
+    </form>
+    <div id="okay2">
+      <button id="remove2" class="request">Delete Item</button>
     </div>
-    <script src="js/toolbar.js"></script>
-    <script src="js/userInfo.js"></script>
-    <script src="js/itemCRUD.js"></script>
-  </body>
+  </div>
+  <script src="js/toolbar.js"></script>
+  <script src="js/userInfo.js"></script>
+  <script src="js/itemCRUD.js"></script>
+</body>
+
 </html>
