--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Yeemazon - Sign Up</title>
-    <meta charset="utf-8"/>
-    <link rel="stylesheet" href="css/style.css">
-    <style type="text/css">
-      h1 {font-size:102px;}
-      h2 {font-size:24px;}
-      #loginBox {height:530px;}
-      #request {font-size:18px;width: 150px;height:30px;}
-    </style>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src='https://www.google.com/recaptcha/api.js'></script>
-  </head>
 
-  <body>
-    <div style="margin-top: 5%"></div>
-    <h1 class="loginHeader">Yeemazon</h1>
-    <h2 class="loginHeader">Sign Up</h2>
-    <div style="margin-top: 1%"></div>
+<head>
+  <title>Yeemazon - Sign Up</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/style.css">
+  <style type="text/css">
+    h1 {
+      font-size: 102px;
+    }
 
-    <div id="loginBox">
-      <br>
-      <label>Choose a username</label>
-      <div style="margin-top: 10px"></div>
-      <input id="username" type="text" class="loginInput">
-      <div style="margin-top: 30px"></div>
+    h2 {
+      font-size: 24px;
+    }
 
-      <label>Enter your email</label>
-      <div style="margin-top: 10px"></div>
+    #loginBox {
+      height: 530px;
+    }
 
-      <input id="email" name = "email" type="text" class="loginInput">
-      <div style="margin-top: 30px"></div>
+    #request {
+      font-size: 18px;
+      width: 150px;
+      height: 30px;
+    }
+  </style>
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script src='https://www.google.com/recaptcha/api.js'></script>
+</head>
 
-      <label>Choose a password (hidden)</label>
-      <div style="margin-top: 10px"></div>
-      <input id="password" type="password" class="loginInput">
-      <div style="margin-top: 40px"></div>
+<body>
+  <div style="margin-top: 5%"></div>
+  <h1 class="loginHeader">Yeemazon</h1>
+  <h2 class="loginHeader">Sign Up</h2>
+  <div style="margin-top: 1%"></div>
 
-      <div align = "center" class="g-recaptcha" data-sitekey="6LfhUk4UAAAAACFLoT8YhRJxxtEJuamEWGQXNhfb"></div>
-      <div style="margin-top: 30px"></div>
+  <div id="loginBox">
+    <br>
+    <label>Choose a username</label>
+    <div style="margin-top: 10px"></div>
+    <input id="username" type="text" class="loginInput">
+    <div style="margin-top: 30px"></div>
 
-      <button id="request" class="request">Sign up!</button>
-    </div>
+    <label>Enter your email</label>
+    <div style="margin-top: 10px"></div>
 
-    <script src="js/signup.js"></script>
-  </body>
+    <input id="email" name="email" type="text" class="loginInput">
+    <div style="margin-top: 30px"></div>
+
+    <label>Choose a password (hidden)</label>
+    <div style="margin-top: 10px"></div>
+    <input id="password" type="password" class="loginInput">
+    <div style="margin-top: 40px"></div>
+
+    <div align="center" class="g-recaptcha" data-sitekey="6LfhUk4UAAAAACFLoT8YhRJxxtEJuamEWGQXNhfb"></div>
+    <div style="margin-top: 30px"></div>
+
+    <button id="request" class="request">Sign up!</button>
+  </div>
+
+  <script src="js/signup.js"></script>
+</body>
+
 </html>
