--- a/public/views/404.html
+++ b/public/views/404.html
@@ -11,11 +11,11 @@
       height: 30px;
       margin-bottom: 20px;
     }
-
-    #notbox {
-      height:150px;
+    #accountBox {
+      height:68px;
+      width:240px;
+      background-color: rgba(0,0,0,0.5);
     }
-
     body {
       background: cover;
     }
@@ -27,14 +27,14 @@
   <div style="margin-top: 5%"></div>
   <h1 id="header" class="loginHeader">Yeemazon</h1>
   <h2 class="loginExtra">404 - Page not found</h2>
-  <div style="margin-top: 30px"></div>
+  <div style="margin-top: 200px"></div>
 
-  <div id="notbox">
-    </select><br><br>
-    <button id="requestPermission" class="request">Return to Session</button>
+  <div id="accountBox">
+    </select>
+    <br>
+    <button id="requestPermission" class="request" style="cursor:pointer">Return to Session</button>
   </div>
-  <script src="js/userInfo.js"></script>
-  <script src="js/account.js"></script>
+  <script src="js/404.js"></script>
 </body>
 
 </html>
